# frost_wizard

./: .gitignore  Cargo.toml  linktest.lnk  test.lnk  test2.lnk
.github/workflows/: build-for-release.yml
examples/: basic.rs  basic_compiled.rs
examples/basic/: Cargo.toml
experiments/: Cargo.toml
experiments/src/: main.rs
lnk-rs/: Cargo.toml
lnk-rs/src/: lib.rs  lnk.rs  main.rs
lnk-rs/src/lnk/: block_data.rs  helpers.rs  id_list.rs  link_info.rs
lnk-rs/src/lnk/block_data/: console.rs  icon_environment.rs  known_folder.rs  property_store.rs  special_folder.rs  tracker.rs
lnk-rs/src/lnk/block_data/property_store/: app_user_model_properties.rs  link_properties.rs  system_basic_properties.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: config.rs  installer.rs  installer_creator.rs  lib.rs  link_file.rs  lnk.rs  main.rs  post_embed.rs  ui.rs  windows.rs  wizard.rs
src/config/: manifest.rs
src/installer/: basic.rs
src/installer/basic/: config.rs
src/lnk/: console_data_block.rs  helpers.rs  icon_environment.rs  id_list.rs  known_folder_data_block.rs  link_info.rs  property_store.rs  special_folder_data_block.rs  tracker_data_block.rs
src/lnk/property_store/: app_user_model_properties.rs  link_properties.rs  system_basic_properties.rs
src/ui/: scaffold.rs
src/wizard/: basic.rs
src/wizard/basic/: config.rs
