[package]
name = "frost_wizard"
version.workspace = true
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
rfd = { version = "0.15.3", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
sipper = "0.1.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs"] }

[workspace]
members = ["examples/*"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
frost_wizard = { version = "0.1.0", path = "." }
