[package]
name = "frost_wizard"
version.workspace = true
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
rfd = { version = "0.15.3", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
sipper = "0.1.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs"] }
macros = { path = "macros" }
zip = "4.3.0"
clap = { version = "4.5.42", features = ["derive"] }
indicatif = "0.18.0"
windows-registry = "0.5.3"

[workspace]
members = ["examples/*", "experiments", "macros"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
frost_wizard = { version = "0.1.0", path = "." }
