[package]
name = "frost_wizard"
version.workspace = true
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
rfd = { version = "0.15.3", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
sipper = "0.1.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["sync"] }
macros = { path = "macros" }
zip = "4.3.0"
clap = { version = "4.5.42", features = ["derive"] }
indicatif = "0.18.0"
windows-registry = "0.5.3"
cargo_toml = "0.22.3"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.219", features = ["alloc", "derive"] }
chrono = "0.4.41"
bitflags = "2.9.3"
byteorder = "1.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-result = "0.3.4"
windows = { version = "0.61.3", features = [
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3.0"

[workspace]
members = ["examples/*", "macros"]

[workspace.package]
version = "0.1.0"
